--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,11 @@
     },
     "require-dev": {
         "phpspec/phpspec": "^3.2",
-        "phpunit/phpunit": "^6.0",
         "mikey179/vfsStream": "*"
     },
     "authors": [
         {
-            "name": "Andrius K.",
+            "name": "Andrius Kvaraciejus",
             "email": "akvara@gmail.com"
         }
     ]
