--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     },
     "require-dev": {
         "phpspec/phpspec": "^3.2",
+        "phpunit/phpunit": "^6.0",
         "mikey179/vfsStream": "*"
     },
     "authors": [
